fix: box page box size on small displays

--- a/src/components/BoxPage.scss
+++ b/src/components/BoxPage.scss
@@ -16,7 +16,7 @@
 }
 
 .box-page__box {
-  width: 400px;
+  max-width: 400px;
   background-color: #fefefe;
   text-align: center;
   padding: 2rem;
